--- a/EMS/core-bundle/src/Resources/views/user/permissions.html.twig
+++ b/EMS/core-bundle/src/Resources/views/user/permissions.html.twig
@@ -56,7 +56,7 @@
 
                                         <div class="btn-group">
                                             {% include '@EMSCore/elements/get-button.html.twig' with {
-                                                'url':  path('permissions.view', {'id': contentType.id}),
+                                                'url':  path('permissions.view', {'contentType': contentType.id}),
                                                 'label': 'View',
                                                 'icon': 'tv'
                                             }%}
