--- a/EMS/core-bundle/src/Resources/views/user/specific-permissions-field.html.twig
+++ b/EMS/core-bundle/src/Resources/views/user/specific-permissions-field.html.twig
@@ -4,7 +4,14 @@
     <li id="{{ child.id }}" class="{% if not (child.type~'::isContainer')|emsco_call_user_func %}mjs-nestedSortable-no-nesting{% endif %}">
         <div class="box-header">
             <b>{{ child.name }}</b> {{ child.type }}
-
+            <div class="pull-right"
+                {% set fieldOptions = child.options %}
+                {% if fieldOptions.restrictionOptions is defined and fieldOptions.restrictionOptions.minimum_role is null %}
+                    <span>No minimum role</span>
+                {% elseif fieldOptions.restrictionOptions.minimum_role is defined %}
+                    <span>Minimum Role: {{ fieldOptions.restrictionOptions.minimum_role }}</span>
+                {% endif %}
+            </div>
         </div>
         {% if (child.type~'::isContainer')|emsco_call_user_func and child.children|length > 0  %}
             <ol>
