--- a/EMS/core-bundle/src/Resources/views/user/permissions.html.twig
+++ b/EMS/core-bundle/src/Resources/views/user/permissions.html.twig
@@ -49,27 +49,42 @@
                                 <tr class="text-{{ contentType.color }}">
                                     <td class="text-center">{{ loop.index }}.</td>
                                     <td class="text-center"><i class="{% if contentType.icon %}{{ contentType.icon }}{% else %}fa fa-book{% endif %}"></i></td>
-                                    <td>{{ contentType.roles.view|replace({'ROLE_': ''}) }}</td>
-                                    <td>{{ contentType.roles.create|replace({'ROLE_': ''}) }}</td>
-                                    <td>{{ contentType.roles.edit|replace({'ROLE_': ''}) }}</td>
+                                    <td>{{ contentType.roles.view|trans }}</td>
+                                    <td>{{ contentType.roles.create|trans }}</td>
+                                    <td>{{ contentType.roles.edit|trans }}</td>
                                     <td>
-
                                         <div class="btn-group">
-                                            {% include '@EMSCore/elements/get-button.html.twig' with {
-                                                'url':  path('permissions.view', {'contentType': contentType.id}),
-                                                'label': 'View',
-                                                'icon': 'tv'
-                                            }%}
+                                            {% if contentType.fieldType is defined and contentType.fieldType is not empty %}
+                                                {% set hasNullMinimumRole = false %}
+                                                {% for field in contentType.fieldType %}
+                                                    {% set fieldOptions = field.options %}
+                                                    {% if fieldOptions.restrictionOptions is defined and fieldOptions.restrictionOptions.minimum_role is null %}
+                                                        console.log(minimum_role)
+                                                        {% set hasNullMinimumRole = true %}
+                                                    {% endif %}
+                                                {% endfor %}
+                                                {% if not hasNullMinimumRole %}
+                                                    {% include '@EMSCore/elements/get-button.html.twig' with {
+                                                        'url':  path('permissions.view', {'contentType': contentType.id}),
+                                                        'label': 'View',
+                                                        'icon': 'tv'
+                                                    }%}
+                                                {% endif %}
+                                            {% else %}
+                                                {% include '@EMSCore/elements/get-button.html.twig' with {
+                                                    'url':  path('permissions.view', {'contentType': contentType.id}),
+                                                    'label': 'View',
+                                                    'icon': 'tv'
+                                                }%}
+                                            {% endif %}
                                         </div>
-
-
                                     </td>
-                                    <td>{{ contentType.roles.publish|replace({'ROLE_': ''}) }}</td>
-                                    <td>{{ contentType.roles.delete|replace({'ROLE_': ''}) }}</td>
-                                    <td>{{ contentType.roles.trash|replace({'ROLE_': ''}) }}</td>
-                                    <td>{{ contentType.roles.archive|replace({'ROLE_': ''}) }}</td>
-                                    <td>{{ contentType.roles.show_link_create|replace({'ROLE_': ''}) }}</td>
-                                    <td>{{ contentType.roles.show_link_search|replace({'ROLE_': ''}) }}</td>
+                                    <td>{{ contentType.roles.publish|trans }}</td>
+                                    <td>{{ contentType.roles.delete|trans }}</td>
+                                    <td>{{ contentType.roles.trash|trans }}</td>
+                                    <td>{{ contentType.roles.archive|trans }}</td>
+                                    <td>{{ contentType.roles.show_link_create|trans }}</td>
+                                    <td>{{ contentType.roles.show_link_search|trans }}</td>
                                 </tr>
                             {% endfor %}
                             </tbody>
