fix: Code fixes based on Git feedBack, still need to rename files and restructure

--- a/EMS/core-bundle/src/Resources/views/user/permissions.html.twig
+++ b/EMS/core-bundle/src/Resources/views/user/permissions.html.twig
@@ -34,7 +34,7 @@
                             <tr>
                                 <th class="text-center" style="width: 10px">Content Type</th>
                                 <th class="text-center" style="width: 20px">Icon</th>
-                                <th>View</th>
+                                <th>{{ 'view.user.permissions.table_headers.view'|trans }}</th>
                                 <th>Create</th>
                                 <th>Edit</th>
                                 <th>Specif. Roles</th>
