--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
@@ -59,12 +59,12 @@
 {% block container_field_type_row %}
 <div id="{{ form.vars.id }}" class="container-fluid">
 	<div class="row">
-    	<div class="panel panel-default">
-        	<div class="panel-heading with-border">
-        		<h3 class="panel-title text-">{{- form_label(form) -}}</h3>
+    	<div class="card card-default">
+        	<div class="card-heading with-border">
+        		<h3 class="card-title text-">{{- form_label(form) -}}</h3>
         	</div>
 
-    	  	<div class="panel-body">
+    	  	<div class="card-body">
     	  		{{- form_widget(form) -}}
     	  	</div>
     	    {{- form_errors(form) -}}
@@ -347,8 +347,8 @@
 
 {% block container_label -%}
 	{% if data.fieldType.displayOptions.label is defined  %}
-		<div class="panel-heading">
-			<h3 class="panel-title">
+		<div class="card-heading">
+			<h3 class="card-title">
 				{% if data.fieldType.displayOptions.icon is defined %}<i class="{{ data.fieldType.displayOptions.icon }}"></i>&nbsp;{% endif %}
 			</h3>
 		</div>
@@ -462,9 +462,9 @@
 
 
 {# {% block container_row -%}#}
-{# 	<div class="panel panel-default">#}
+{# 	<div class="card card-default">#}
 {# 	  	{{- form_label(form) -}}#}
-{# 	  	<div class="panel-body">#}
+{# 	  	<div class="card-body">#}
 {# 	  		{{- form_widget(form) -}}#}
 {# 	  	</div>#}
 {# 	    {{- form_errors(form) -}}#}
@@ -483,11 +483,11 @@
 
 {% block tabsfieldtype_row -%}
 {# <div class="form-group{% if class %} {{ class }}{% else %} col-xs-12 {% endif %}{% if (not compound or force_error|default(false)) and not valid %} has-error{% endif %}">#}
-{# 	<div class="panel panel-default">#}
-{# 		<div class="panel-heading">#}
+{# 	<div class="card card-default">#}
+{# 		<div class="card-heading">#}
 {# 	  		{{- form_label(form) -}}#}
 {# 	  	</div>#}
-{# 	  	<div  class="panel-body">#}
+{# 	  	<div  class="card-body">#}
 			{{- form_widget(form) -}}
 {# 		</div>#}
 		{{- form_errors(form) -}}
@@ -594,7 +594,7 @@
 			data-index="0"
 		{% endif %}>
 		{% set tempId = form.vars.name~'_'~random() %}
-		<div class="panel-body{% if  form.vars.sortable %} ems-sortable{% endif %}">
+		<div class="card-body{% if  form.vars.sortable %} ems-sortable{% endif %}">
 		    {{- form_widget(form, { 'attr': {'class': 'collection-panel-container'} }) -}}
 		</div>
 		<div>
@@ -610,8 +610,8 @@
 {% block collectionfieldtype_row -%}
     {% set collapsible = form.vars.data.fieldType.displayOptions.collapsible|default(false) %}
 {# <div class="form-group{% if class %} {{ class }}{% else %} col-xs-12 {% endif %}{% if (not compound or force_error|default(false)) and not valid %} has-error{% endif %}">#}
-	<div class="panel panel-default {% if collapsible %}collapsible-collection{% endif %}">
-		<div class="panel-heading">
+	<div class="card card-default {% if collapsible %}collapsible-collection{% endif %}">
+		<div class="card-heading">
 	  		{{- form_label(form) -}}
 
             {% if collapsible %}
@@ -625,7 +625,7 @@
             {% endif %}
 
 	  	</div>
-	  	<div  class="panel-body {% if collapsible %}collapse{% endif %}">
+	  	<div  class="card-body {% if collapsible %}collapse{% endif %}">
 			{{- form_widget(form) -}}
 		</div>
 		{{- form_errors(form) -}}
@@ -637,8 +637,8 @@
 {% set collapsible = form.parent.vars.data.fieldType.displayOptions.collapsible|default(false) %}
 
 <div data-index="{{ form.vars.name }}" data-id="{{ form.vars.id }}" class="form-group collection-item-panel{% if form.parent.vars.itemBootstrapClass %} {{ form.parent.vars.itemBootstrapClass }}{% else %} col-xs-12 {% endif %}{% if (not compound or force_error|default(false)) and not valid %} has-error{% endif %}">
-	<div class="panel panel-default">
-		<div class="panel-heading ems-handle">
+	<div class="card card-default">
+		<div class="card-heading ems-handle">
 			{{ form_label(form) }}
 	  		<div class="btn-group float-end">
 	  			{{- form_widget(form.remove_collection_item) -}}
@@ -654,7 +654,7 @@
 			</div>
 	  	</div>
 
-	  	<div class="panel-body {% if collapsible %}collapse{% endif %}">
+	  	<div class="card-body {% if collapsible %}collapse{% endif %}">
 	  		<div class="row">
 	  		{% for child in form.iterator|filter(c => c.vars.name not in ['remove_collection_item', '_ems_internal_deleted']) %}
 				<div class="{% if child.vars.data.fieldType.options.displayOptions.class is defined %}{{ child.vars.data.fieldType.options.displayOptions.class }}{% endif %}">
@@ -727,11 +727,11 @@
 {# {% block datafieldtype_row -%}#}
 {# {# <div class="form-group{% if class %} {{ class }}{% else %} col-xs-12 {% endif %}{% if form.vars.value.fieldType is defined and form.vars.value.fieldType.options.restrictionOptions is defined and form.vars.value.fieldType.options.restrictionOptions.mandatory is defined and form.vars.value.fieldType.options.restrictionOptions.mandatory %} required {% endif %}{% if force_error|default(false) or not valid or form.vars.errors|length > 0 %} has-error{% endif %}">#}#}
 {# 	{% if isContainer and form.vars.data and form.vars.data.fieldType.options.displayOptions.label %}#}
-{# 		<div class="panel panel-default">#}
-{# 			<div class="panel-heading">#}
+{# 		<div class="card card-default">#}
+{# 			<div class="card-heading">#}
 {# 		  		{{- form_label(form) -}}#}
 {# 		  	</div>#}
-{# 		  <div class="panel-body">#}
+{# 		  <div class="card-body">#}
 {# 		    {{- form_widget(form) -}}#}
 {# 		  </div>#}
 {# 		  {{- form_errors(form) -}}#}
@@ -1043,14 +1043,14 @@
 		{% endif %}
 	{% endset %}
 
-<div class="panel panel-default file-uploader-row{% if (not compound or force_error|default(false)) and not valid %} has-error{% endif %}"{% if form.vars.multiple|default(false) %} data-multiple="{{ multipleTemplate|e('html_attr') }}"{% endif %}>
-	<div class="panel-heading">
-		<h3 class="panel-title">
+<div class="card card-default file-uploader-row{% if (not compound or force_error|default(false)) and not valid %} has-error{% endif %}"{% if form.vars.multiple|default(false) %} data-multiple="{{ multipleTemplate|e('html_attr') }}"{% endif %}>
+	<div class="card-heading">
+		<h3 class="card-title">
 			<i class="fa fa-file-o"></i>
 			{{ form_label(form) }}
 		</h3>
 	</div>
-	<div class="panel-body" >
+	<div class="card-body" >
 		{% if form.children.files is not defined %}
 			<div class="modal" tabindex="-1" role="dialog" id="asst-details-{{ form.vars.id }}">
 			  <div class="modal-dialog" role="document">
@@ -1118,7 +1118,7 @@
         {{- form_errors(form) -}}
       </div>
 	</div>
-	<div class="panel-footer">
+	<div class="card-footer">
 		{% if form.vars.multiple|default(false) %}
 			<div class="btn-group">
 				<input type="file" id="file-upload-{{ form.vars.id }}" class="file-uploader-input" {% if form.vars.disabled %}disabled="disabled"{% endif %} multiple="multiple">
@@ -1145,14 +1145,14 @@
 
 
 {% block filetype_row %}
-<div class="panel panel-default file-uploader-row" {% if form.vars.meta_fields %}data-meta-fields{% endif %}>
-	<div class="panel-heading">
-		<h3 class="panel-title">
+<div class="card card-default file-uploader-row" {% if form.vars.meta_fields %}data-meta-fields{% endif %}>
+	<div class="card-heading">
+		<h3 class="card-title">
 			<i class="fa fa-file-o"></i>
 			{{ form_label(form) }}
 		</h3>
 	</div>
-	<div class="panel-body" >
+	<div class="card-body" >
 		<div class="modal" tabindex="-1" role="dialog" id="asst-details-{{ form.vars.id }}">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -1208,7 +1208,7 @@
         </div>
       </div>
 	</div>
-	<div class="panel-footer">
+	<div class="card-footer">
 		<div class="btn-group">
 			<input type="file" id="upload-{{ form.vars.id }}" class="file-uploader-input">
 			<label for="upload-{{ form.vars.id }}"><i class="fa fa-upload"></i> Upload file</label>
