--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/wysiwyg_styles_set/iframe.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/wysiwyg_styles_set/iframe.html.twig
@@ -8,13 +8,13 @@
         {% if styleSet.assets.sha1|default %}
             {% do emsch_assets_version(styleSet.assets.sha1) %}
         {% endif %}
-        {% if null != styleSet.contentCss %}
+        {% if styleSet.contentCss|default %}
             <link rel="stylesheet" href="{{ asset(styleSet.contentCss, styleSet.saveDir == null ? 'emsch' : null) }}">
         {% endif %}
     {% endapply %}
 </head>
 <body class="wysiwyg-preview">
-{% if null != styleSet.contentJs %}
+{% if styleSet.contentJs|default %}
     <script src="{{ asset(styleSet.contentJs, styleSet.saveDir == null ? 'emsch' : null) }}"></script>
 {% endif %}
     <script type="application/javascript">
