--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
@@ -1476,3 +1476,16 @@
     {{ parent() }}
     <span class="float-end text-counter" data-counter-label="{{ 'field_type.textarea.counter'|trans|e('html_attr') }}"></span>
 {% endblock textarea_widget %}
+
+
+{% block wysiwyg_widget %}
+    {%  with {id: "#{id}--hidden-wysiwyg"} %}
+        {{ block('hidden_widget') }}
+    {% endwith %}
+    {% set iframeUrl = path('emsco_wysiwyg_styleset_iframe', {
+        'name': data.fieldType.displayOptions.styles_set|default('default'),
+        'language': data.fieldType.displayOptions.language|default('en'),
+    }) %}
+    <iframe id="{{ form.vars.id }}" src="{{ iframeUrl }}" class="styleset-preview card-body" data-iframe-body="{{ value|e('html_attr') }}"></iframe>
+    <span class="float-end text-counter" data-counter-label="{{ 'field_type.textarea.counter'|trans|e('html_attr') }}"></span>
+{% endblock wysiwyg_widget %}
