--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
@@ -1486,6 +1486,6 @@
         'name': data.fieldType.displayOptions.styles_set|default('default'),
         'language': data.fieldType.displayOptions.language|default('en'),
     }) %}
-    <iframe id="{{ form.vars.id }}" src="{{ iframeUrl }}" class="styleset-preview card-body" data-iframe-body="{{ value|e('html_attr') }}"></iframe>
+    <iframe id="{{ form.vars.id }}" src="{{ iframeUrl }}" class="styleset-editor" data-iframe-body="{{ value|e('html_attr') }}"></iframe>
     <span class="float-end text-counter" data-counter-label="{{ 'field_type.textarea.counter'|trans|e('html_attr') }}"></span>
 {% endblock wysiwyg_widget %}
