ref: move iframe js in a js file

--- a/EMS/admin-ui-bundle/assets/css/core/components/iframe.scss
+++ b/EMS/admin-ui-bundle/assets/css/core/components/iframe.scss
@@ -7,5 +7,5 @@ iframe.styleset-editor {
   width: 100%;
   border: $input-border-width solid $input-border-color;
   border-radius: $input-border-radius;
-  padding: 6px 12px 6px 12px;
+  padding: 6px 12px;
 }
