ref: loading cke5 in iframe => it's a fail

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/wysiwyg_styles_set/editor.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/wysiwyg_styles_set/editor.html.twig
@@ -1,1 +1,14 @@
 {% extends '@EMSAdminUI/bootstrap5/wysiwyg_styles_set/iframe.html.twig' %}
+
+{% block stylesheet %}
+    <link rel="stylesheet" href="{{ asset('editor.css', 'emsadminui') }}">
+{% endblock stylesheet %}
+
+{% block javascript %}
+    <script src="{{ asset('editor.js', 'emsadminui') }}"></script>
+{% endblock javascript %}
+
+
+{% block content %}
+<div id="wysiwyg-content"></div>
+{% endblock content %}
