--- a/EMS/admin-ui-bundle/assets/css/core/components/iframe.scss
+++ b/EMS/admin-ui-bundle/assets/css/core/components/iframe.scss
@@ -1,11 +1,4 @@
-iframe.styleset-preview {
+iframe.styleset-preview, iframe.styleset-editor {
   border-width: 0;
   width: 100%;
-}
-
-iframe.styleset-editor {
-  width: 100%;
-  border: $input-border-width solid $input-border-color;
-  border-radius: $input-border-radius;
-  padding: 6px 12px;
 }
