--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/revisions-data.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/revisions-data.html.twig
@@ -12,6 +12,10 @@
 	{%- if versionTo != 'now' -%}{%- set revisionColor = 'gray' -%}{%- endif -%}
 {% endif %}
 
+{%- block stylesheets %}
+    <link rel="stylesheet" href="{{ path('emsco_wysiwyg_styleset_all_prefixed_css') }}">
+{% endblock %}
+
 {% block title %}
 	{{ 'views.data.revisions-data-html.title'|trans({
 		'%content-type%': revision.contentType.singularName,
