--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/search-form-filter.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/search-form-filter.html.twig
@@ -100,7 +100,7 @@
 									'class': 'btn'
 								} %}
 								{% if form.contentTypes.vars.value|length == 1 %}
-									{% set contentType = form.contentTypes.vars.value|first|get_content_type %}
+									{% set contentType = form.contentTypes.vars.value|first|emsco_get_content_type %}
 									{% if contentType %}
 										{% include '@EMSAdminUI/bootstrap5/elements/post-button.html.twig' with {
 											'url':  path('ems_search_set_default_search_from', {
