--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/profile/show.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/profile/show.html.twig
@@ -43,9 +43,9 @@
                         <li class="list-group-item">
                             <b>{{ 'user.profile.show.locale_preferred'|trans }}</b> <i class="float-end">{{ user.localePreferred|locale_name }}</i>
                         </li>
-                        {% if circles_object and circles_object|get_content_type %}
+                        {% if circles_object and circles_object|emsco_get_content_type %}
                             <li class="list-group-item">
-                                <b>{{ circles_object|get_content_type.pluralName }} : </b>
+                                <b>{{ circles_object|emsco_get_content_type.pluralName }} : </b>
                                 <i class="float-end">
                                     {% for circle in user.circles  -%}
                                         <span class="badge bg-primary text-nowrap">{{- circle|emsco_display|raw -}}</span>&nbsp;
